--- a/wk1/excercises/1.1/index.html
+++ b/wk1/excercises/1.1/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excercise 1.1</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.css" type="text/css">
 </head>
 <body>
     <div class="helloWorld">
