--- a/wk1/assignments/index.html
+++ b/wk1/assignments/index.html
@@ -2,9 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="main.css" type="text/css">
+    <title>Assignment 1A</title>
 </head>
 <body>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.min.js"></script>
+    <script src="snowman.js"></script>
 </body>
 </html>
