--- a/wk2/assignment/index.html
+++ b/wk2/assignment/index.html
@@ -8,18 +8,32 @@
   <body
     style="
       margin: 0;
-      background: lavenderblush;
-      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
-        'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+      background-color: rgba(0, 0, 0, 0.65);
+      background-image: url('https://media.moddb.com/cache/images/groups/1/2/1488/thumb_620x2000/40528_the_lord_of_the_rings.jpg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+      font-family: fantasy;
       text-align: center;
+      letter-spacing: .1rem;
+      line-height: 4rem;
       position: absolute;
-      bottom: 50%;
-      left: 10%;
+      top: 25%;
+      left: 5%;
     "
   >
-    <h1 style="margin: auto; color: rebeccapurple">
-        “A box without hinges, key, or lid,<br>
-        Yet <em>coded</em> treasure inside is hid.”
+    <h1
+      style="
+        margin: auto;
+        padding: 30px 50px 20px;
+        border-radius: 10px;
+        color: lightgoldenrodyellow;
+        box-shadow: 3px 3px 5px black;
+        background-color: rgba(92, 71, 0, 0.75);
+      "
+    >
+      “A box without hinges, key, or lid,<br />
+      Yet <em>coded</em> treasure inside is hid.”
     </h1>
     <script src="main.js"></script>
   </body>
