--- a/wk2/assignment/index.html
+++ b/wk2/assignment/index.html
@@ -12,10 +12,9 @@
       Yet <em>coded</em> treasure inside is hid.”
     </h1>
     <p>
-      artwork from
       <a
         href="https://media.moddb.com/cache/images/groups/1/2/1488/thumb_620x2000/40528_the_lord_of_the_rings.jpg"
-        >modb.com</a
+        >artwork from modb.com</a
       >
     </p>
     <script src="main.js"></script>
