--- a/wk2/assignment/index.html
+++ b/wk2/assignment/index.html
@@ -14,6 +14,8 @@
     <p>
       <a
         href="https://media.moddb.com/cache/images/groups/1/2/1488/thumb_620x2000/40528_the_lord_of_the_rings.jpg"
+        target="_blank"
+        rel="noopener noreferrer"
         >artwork from modb.com</a
       >
     </p>
