--- a/wk3/ex2-pattern/index.html
+++ b/wk3/ex2-pattern/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pattern</title>
   </head>
-  <body style="margin: 0">
+  <body>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
     <script src="pattern.js"></script>
   </body>
