--- a/wk3/assignment-quiz/index.html
+++ b/wk3/assignment-quiz/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
     
     <!-- <link rel="stylesheet" href="style.css"> -->
-    <title>Functions & Loops</title>
+    <title>Quiz Demo</title>
 </head>
 <body>
-    <!-- <script src="demo-p5.js"></script> -->
+    <script src="quiz.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
 </body>
