--- a/wk3/assignment-quiz/index.html
+++ b/wk3/assignment-quiz/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <script src="main.js"></script> -->
-    
-    <!-- <link rel="stylesheet" href="style.css"> -->
+
+    <link rel="stylesheet" href="style.css" />
     <title>Quiz Demo</title>
-</head>
-<body>
+  </head>
+  <body>
     <script src="quiz.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
-</body>
+  </body>
 </html>
