--- a/wk3/assignment-quiz/index.html
+++ b/wk3/assignment-quiz/index.html
@@ -6,7 +6,7 @@
     <!-- <script src="main.js"></script> -->
 
     <link rel="stylesheet" href="style.css" />
-    <title>Quiz Demo</title>
+    <title>LOTR Riddle Quiz</title>
   </head>
   <body>
     <script src="quiz.js"></script>
