--- a/wk4/assignment/card-back/index.html
+++ b/wk4/assignment/card-back/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memory Game</title>
+    <title>Card Back</title>
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/p5"></script>
-    <script src="memory.js"></script>
+    <script src="card-back.js"></script>
 </body>
 </html>
