--- a/wk7/assignment/index.html
+++ b/wk7/assignment/index.html
@@ -30,7 +30,7 @@
         v-for="(phone, index) in phones"
         v-bind:class="{rowDiv: index % 1 === 0, lowestDepreciation: (phone.costThen - phone.costNow) <= 5, highestDepreciation: 600 < (phone.costThen - phone.costNow) }"
       >
-        <span v-bind:class="{brandImg: phone.brand}"><img v-bind:src="phone.brand"/></span>
+        <span v-bind:class="{brandImg: phone.brand}"><img v-bind:src="phone.brand" v-bind:alt="phone.brandName"/></span>
         <span v-bind:class="{alignL: phone.model}">{{ phone.model }}</span>
         <span v-bind:class="{alignL: phone.released}"
           >{{ phone.released }}</span
